--- a/oublie_mdp.html
+++ b/oublie_mdp.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
     <!--selecteur-->
     <link rel="stylesheet" type="text/css" href="css/bootstrap-select.min.css">
