--- a/admin/index.html
+++ b/admin/index.html
@@ -46,47 +46,50 @@
         <div><!--Barre de navigation-->
             <div  id="tabs">
                 <ul>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==1){ echo 'activetab';}else if (!isset($_GET['i'])){ echo 'activetab';} ?>"><a href="?i=1">Général</a></li>
+                    <li class="tabs <?php if(!isset($_GET['i'])|| $_GET['i']==1) echo 'activetab' ?>"><a href="?i=1">Général</a></li>
                     <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==2) echo 'activetab' ?> "><a href="?i=2">Club</a></li>
                     <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==3) echo 'activetab' ?>"><a href="?i=3">Forums</a></li>
                     <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==4) echo 'activetab' ?>"><a href="?i=4">Messages</a></li>
                     <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==5) echo 'activetab' ?>"><a href="?i=5">Utilisateurs</a></li>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==6) echo 'activetab' ?>"><a href="?i=6">Historique</a></li>
+                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==6) echo 'activetab' ?>"><a href="?i=6">Maintenance</a></li>
                     <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==7) echo 'activetab' ?>"><a href="?i=7">Liste des jeux</a></li>
                 </ul>
             </div>
             <div id="acp">
                 <div id="content">
                     <div id="menu">
-                        <div style="float:left;">
+                        <p>
+                            Vous êtes connecté en tant que :<br><strong><?php echo $_SESSION['pseudo']; ?></strong>
+                            [ <a href="../deconnexion.php">Déconnexion</a> ]
+                            <?php //var_dump($_SESSION); ?>
+                        </p>
                             <?php if(isset($_GET['i']))
-                            {
-                                switch($_GET['i'])
                                 {
-                                    case "1" :  include_once("menu/general.html");
-                                                break;
-                                    case "2" :  include_once("menu/club.html");
-                                                break;
-                                    case "3" :  include_once("menu/forums.html");
-                                                break;
-                                    case "4" :  include_once("menu/messages.html");
-                                                break;
-                                    case "5" :  include_once("menu/utilisateurs.html");
-                                                break;
-                                    case "6" :  include_once("menu/historique.html");
-                                                break;
-                                    case "7" :  include_once("menu/liste_jeux.html");
-                                                break;
-                                    default  :  include_once("menu/general.html");
-                                                break;
+                                    switch($_GET['i'])
+                                    {
+                                        case "1" :  include_once("menu/general.html");
+                                                    break;
+                                        case "2" :  include_once("menu/club.html");
+                                                    break;
+                                        case "3" :  include_once("menu/forums.html");
+                                                    break;
+                                        case "4" :  include_once("menu/messages.html");
+                                                    break;
+                                        case "5" :  include_once("menu/utilisateurs.html");
+                                                    break;
+                                        case "6" :  include_once("menu/maintenance.html");
+                                                    break;
+                                        case "7" :  include_once("menu/liste_jeux.html");
+                                                    break;
+                                        default  :  include_once("menu/general.html");
+                                                    break;
+                                    }
                                 }
-                            }
-                            else
-                            {
-                                include_once("menu/general.html");
-                            }
+                                else
+                                {
+                                    include_once("menu/general.html");
+                                }
                             ?>
-                        </div>
                     </div>
                     <div id="main">
                         <div class="main">
@@ -94,27 +97,27 @@
                             {
                                 switch($_GET['i'])
                                 {
-                                    case "1" :  include_once("main/general.html");
+                                    case "1" :  include_once("main/general.php");
                                                 break;
-                                    case "2" :  include_once("main/club.html");
+                                    case "2" :  include_once("main/club.php");
                                                 break;
-                                    case "3" :  include_once("main/forums.html");
+                                    case "3" :  include_once("main/forums.php");
                                                 break;
-                                    case "4" :  include_once("main/messages.html");
+                                    case "4" :  include_once("main/messages.php");
                                                 break;
-                                    case "5" :  include_once("main/utilisateurs.html");
+                                    case "5" :  include_once("main/utilisateurs.php");
                                                 break;
-                                    case "6" :  include_once("main/historique.html");
+                                    case "6" :  include_once("main/maintenance.php");
                                                 break;
-                                    case "7" :  include_once("main/liste_jeux.html");
+                                    case "7" :  include_once("main/liste_jeux.php");
                                                 break;
-                                    default  :  include_once("main/general.html");
+                                    default  :  include_once("main/general.php");
                                                 break;
                                 }
                             }
                             else
                             {
-                                include_once("main/general.html");
+                                include_once("main/general.php");
                             }
                             ?>
                         </div>
